fix : overflow를 컨테이너에 부여

--- a/src/css/slide.css
+++ b/src/css/slide.css
@@ -6,6 +6,7 @@ li{list-style:none;}
 	width: 100%;
 	justify-content: center;
 	height: 400px;
+  overflow: hidden;
   
 	
 }
